--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   flutter_rating_bar: ^4.0.1
+  table_calendar: ^3.1.1
+  country_picker: ^2.0.22
+  provider: ^6.1.0
 
 dev_dependencies:
   flutter_test:
