--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   country_picker: ^2.0.22
   provider: ^6.1.0
   geolocator: ^11.0.0
+  geocoding: ^2.0.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
